--- a/app/src/main/res/layout/activity_add_measurement.xml
+++ b/app/src/main/res/layout/activity_add_measurement.xml
@@ -1,83 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
-        <ScrollView
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".view.activities.AddFoodActivity">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <!--
-              <androidx.constraintlayout.widget.ConstraintLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent">
+            <!-- o_O -->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/amount_food_consumed">
 
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_marginTop="16dp"
-                      android:text="Pre information"
-                      android:textAlignment="center"
-                      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                      android:textColor="@color/colorPrimary"
-                      app:layout_constraintEnd_toEndOf="parent"
-                      app:layout_constraintHorizontal_bias="0.0"
-                      app:layout_constraintStart_toStartOf="parent"
-                      app:layout_constraintTop_toTopOf="parent"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Date: Lorem Ipsum"
-                      tools:layout_editor_absoluteX="16dp"
-                      tools:layout_editor_absoluteY="68dp"
-                      android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-                  <Button
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:onClick="showTimePickerDialog"
-                      android:text="Pick Date"
-                      tools:layout_editor_absoluteX="229dp"
-                      tools:layout_editor_absoluteY="55dp" />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/start_value">
 
-                  <TextView
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Time: Lorem Ipsum"
-                      android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                      tools:layout_editor_absoluteX="16dp"
-                      tools:layout_editor_absoluteY="113dp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-                  <Button
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:onClick="showTimePickerDialog"
-                      android:text="Pick Time"
-                      tools:layout_editor_absoluteX="231dp"
-                      tools:layout_editor_absoluteY="103dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                  <com.google.android.material.textfield.TextInputLayout
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:hint="Amount Food"
-                      android:layout_marginLeft="48dp"
-                      android:layout_marginRight="48dp"
-                      tools:layout_editor_absoluteX="16dp"
-                      tools:layout_editor_absoluteY="161dp">
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/_15_min">
 
-                      <com.google.android.material.textfield.TextInputEditText
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:inputType="number" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-                  </com.google.android.material.textfield.TextInputLayout>
-              </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            -->
-        </ScrollView>
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/_30_min">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+    </ScrollView>
 </layout>
