--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -19,138 +19,198 @@
 
             <!-- About the food -->
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimary"
+                android:padding="16dp"
                 android:text="@string/about_the_food"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="72dp"
-                android:fontFamily="@font/roboto"
-                android:textSize="16sp"
-                android:letterSpacing="0.15"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textColor="@color/colorPrimary" />
 
-            <EditText
-                android:id="@+id/edit_food_name"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
+                android:focusableInTouchMode="true"
                 android:hint="@string/food_name"
-                android:inputType="text"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_brand_name"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_food_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
-                android:hint="@string/brand_name"
-                android:inputType="text"
-                tools:ignore="Autofill" />
+                android:hint="@string/height"
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/activity_add_food_spinner_type"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_brand_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp">
-            </androidx.appcompat.widget.AppCompatSpinner>
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp">
+
+                <AutoCompleteTextView
+                    android:id="@+id/activity_add_food_spinner_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/type"
+                    android:focusable="false"
+                    android:cursorVisible="false"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Nutritional information-->
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
+                android:padding="16dp"
                 android:text="@string/nutritional_information"
-                android:textColor="@color/colorPrimary"
-                android:fontFamily="@font/roboto"
-                android:textSize="16sp"
-                android:letterSpacing="0.15"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textColor="@color/colorPrimary" />
 
-            <EditText
-                android:id="@+id/edit_energy_kcal"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/energy_kcal"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_energy_kj"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_energy_kcal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/energy_kj"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_fat"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_energy_kj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/fat"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_saturates"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_fat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/of_which_saturates"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_protein"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_saturates"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/protein"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_carbohydrates"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_protein"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/carbohydrates"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_sugar"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_carbohydrates"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/of_which_sugars"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
 
-            <EditText
-                android:id="@+id/edit_salt"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_sugar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="72dp"
-                android:layout_marginRight="72dp"
                 android:hint="@string/salt"
-                android:inputType="number"
-                tools:ignore="Autofill" />
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp"
+                android:paddingBottom="16dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edit_salt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </ScrollView>
 </layout>
